--- a/frontend/src/pages/InventariztionPage/style.css
+++ b/frontend/src/pages/InventariztionPage/style.css
@@ -1,17 +1,15 @@
-/* Основные стили для контейнера */
 .store-container {
   display: flex;
   min-height: 200vh;
 }
 
-/* Стили для боковой панели */
 .sidebar {
   width: 350px;
   background-color: rgba(12, 96, 165, 1);
   color: white;
   padding: 20px 0;
   min-height: 200vh;
-  position: fixed; /* Фиксируем позицию */
+  position: fixed;
 }
 
 .sidebar-header {
@@ -49,16 +47,14 @@
   border-left: 4px solid white;
 }
 
-/* Основное содержимое */
 .main-content {
-  margin-left: 350px; /* Отступ равный ширине sidebar */
-  max-width: calc(100% - 350px); /* Ограничиваем ширину */
+  margin-left: 350px; 
+  max-width: calc(100% - 350px); 
   flex: 1;
   padding: 40px;
   background-color: #f9fafb;
 }
 
-/* Остальные стили (оставлены без изменений) */
 .store-header {
   display: flex;
   padding: 15px;
@@ -73,7 +69,6 @@
   font-family: "ADLaM";
   font-weight: 400;
   font-size: 30px;
-  /* line-height: 100%; */
   letter-spacing: 0%;
   text-align: center;
   color: #000000;
@@ -86,11 +81,9 @@
   font-size: 30px;
   line-height: 100%;
   letter-spacing: 0%;
-  /* text-align: center; */
   color: #000000;
   font-family: "ADLaMDisplay", sans-serif;
   margin-top: 25px;
-  /* margin-right: 2180px; */
   padding-left: 15px;
 }
 
@@ -196,25 +189,8 @@
   align-items: center;
   justify-content: center;
   font-weight: bold;
-  /* margin-bottom: 30px; */
   font-size: 32px;
 }
-
-/* .modal-backdrop {
-  background-color: transparent; 
-  position: static; 
-  margin-top: 40px;
-}
-
-.modal {
-  background-color: white;
-  border: 1px solid #ccc;
-  padding: 20px;
-  width: 100%;
-  max-width: 800px;
-  margin: 0 auto;
-  border-radius: 8px;
-} */
 
 .status-ok {
   color: green;
@@ -229,7 +205,6 @@
 .modal-backdrop {
   display: block !important;
   background-color: transparent;
-  /* position: fixed; */
   inset: 0;
   z-index: 999;
 }
@@ -265,7 +240,6 @@
 }
 
 .modal th, .modal td { 
-  /* font-family: "ADLaMDisplay", sans-serif; */
   font-weight: 400;
   font-size: 20px;
   padding:12px; 
