--- a/frontend/src/pages/pricing/Pricing.module.css
+++ b/frontend/src/pages/pricing/Pricing.module.css
@@ -165,3 +165,90 @@ html, body {
   font-size: 26px;
   cursor: pointer;
 }
+
+
+@media (max-width: 768px) {
+  .storixContainer {
+    padding: 0 16px;
+  }
+
+  .logo {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .logo img {
+    margin-right: 0;
+    margin-bottom: 8px;
+  }
+
+  .logo h4 {
+    font-size: 22px;
+  }
+
+  .logoSection h1 {
+    font-size: 22px;
+    padding: 0 10px;
+  }
+
+  .logoSection .subtitle {
+    font-size: 16px;
+    line-height: 1.4;
+  }
+
+  .accessCard {
+    padding: 20px;
+  }
+
+  .accessCard h2 {
+    font-size: 22px;
+  }
+
+  .price {
+    font-size: 24px;
+  }
+
+  .paymentInfo {
+    font-size: 16px;
+  }
+
+  .howItWorks {
+    padding: 16px 10px;
+  }
+
+  .howItWorks h3 {
+    font-size: 16px;
+  }
+
+  .steps {
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+  }
+
+  .step {
+    margin: 0 auto;
+    flex-basis: 0px;
+  }
+
+  .circle {
+    width: 50px;
+    height: 50px;
+    font-size: 22px;
+  }
+
+  .features {
+    font-size: 16px;
+    padding-left: 10px;
+  }
+
+  .features li {
+    font-size: 16px;
+  }
+
+  .accessButton {
+    font-size: 20px;
+    padding: 18px 32px;
+    width: 100%;
+  }
+}
