--- a/frontend/src/pages/home/Home.module.css
+++ b/frontend/src/pages/home/Home.module.css
@@ -12,10 +12,9 @@
   padding: 0 20px;
   box-sizing: border-box;
   color: white;
-  color: #fefefe; /* ярче, чем просто white */
+  color: #fefefe;
   display: flex;
   flex-direction: column;
-  /* justify-content: space-between; */
 }
 
 .background {
